--- a/project/css/general.css
+++ b/project/css/general.css
@@ -1,9 +1,12 @@
 :root {
-  --primary-color2: #00dfdf;
-  --primary-color: #00bfda;
-  --p-color: #bdbdbd;
-  --bcg-color: #1b4e72;
-  --bcg-color2: #174261;
+  --primary-color2: #40b357;
+  --light-color2: #9dca49;
+  --primary-color: #5bc0be;
+  --light-color: #90d3d1;
+  --p-color: rgb(218, 218, 218);
+  --bcg-color: #0e162c;
+  --bcg-color2: #1c2541;
+  --bcg-color3: #3b516c;
   --section-padding: 9rem;
   --main-line-height: 1.5;
   --main-transition: 0.3s;
@@ -22,20 +25,7 @@ body {
   font-weight: 500;
   line-height: 1;
   color: #fff;
-  background-image: url(../media/bcg.png);
-  background-size: cover;
-  background-attachment: fixed;
   position: relative;
-}
-
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
 ul {
@@ -98,7 +88,7 @@ input {
   flex-wrap: wrap;
 }
 .main_btn {
-  width: 18rem;
+  width: 19rem;
   justify-content: center;
   border: solid 0.2rem;
 }
@@ -125,7 +115,6 @@ input {
 }
 .sec_btn {
   border-color: #fff;
-  /* box-shadow: 0 0 0 0.2rem #fff; */
 }
 .sec_btn:hover {
   color: var(--primary-color);
