--- a/project/css/style.css
+++ b/project/css/style.css
@@ -3,55 +3,96 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 4rem 0 5rem;
   z-index: 10;
-  position: relative;
 }
-
-.nav {
-  justify-content: space-between;
+.header--active {
+  background-color: var(--bcg-color);
 }
-.logo {
-  width: 12rem;
-  cursor: pointer;
-  position: relative;
-  z-index: 100;
-}
-@media (max-width: 62em) {
-  .logo {
-    width: 8rem;
+@media (min-width: 62em) {
+  .sticky {
+    position: fixed;
+    background-color: #171d3480;
+    backdrop-filter: blur(0.5rem);
   }
 }
-.nav_list {
-  justify-content: center;
-  transition: all var(--main-transition);
-  z-index: 2;
-}
-.desktop_list {
-  gap: 5.2rem;
-}
-.mobile_list {
-  gap: 3.2rem;
+
+.top_nav {
+  padding: 1.2rem 0;
 }
 @media (max-width: 62em) {
-  .desktop_list {
+  .top_nav {
     display: none;
   }
 }
-.mobile_list {
-  display: none;
+.top_nav .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top_nav_list {
+  display: flex;
+  gap: 2rem;
+}
+
+.top_nav_link a{
+  display: flex;
+  gap: 0.8rem;
+  font-size: 1.4rem;
+  color: var(--bcg-color);
+  cursor: pointer;
+  transition: all var(--main-transition);
+}
+
+.top_nav_link i{
+  font-size: 1.6rem;
+}
+
+.top_nav_list--social{
+  gap: .8rem;
+}
+.top_nav_list--social a{
+  padding: 0.5rem;
+  width: 2.8rem;
+  height: 2.8rem;
+  background-color: var(--bcg-color);
+  border-radius: 50%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  transition: all var(--main-transition);
+}
+
+.top_nav_list--social i{
+  color: #fff;
+}
+
+.nav {
+  padding: 1rem 0;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+}
+
+.nav .container{
+  justify-content: space-between;
+}
+
+.logo {
+  width: 7rem;
+  cursor: pointer;
+}
+.nav_list {
+  justify-content: center;
+  gap: 3.2rem;
+  transition: all var(--main-transition);
+  z-index: 2;
 }
 @media (max-width: 62em) {
-  .mobile_list {
-    display: flex;
-  }
-}
-@media (max-width: 62em) {
-  .mobile_list {
+  .nav_list {
     position: absolute;
     flex-direction: column;
     justify-content: space-around;
-    background-color: var(--bcg-color);
+    background-color: var(--primary-color);
     top: 0;
     left: 0;
     width: 100%;
@@ -61,11 +102,12 @@
   }
 }
 .nav_list--active {
-  padding: 14rem 0 3.2rem;
-  height: 300%;
+  padding: 3.2rem 0;
+  height: 100%;
 }
 .nav_link {
-  font-size: 2rem;
+  font-size: 1.8rem;
+  color: var(--p-color);
   cursor: pointer;
   transition: all var(--main-transition);
   position: relative;
@@ -82,11 +124,26 @@
   transition: all var(--main-transition);
 }
 .middle:hover {
-  color: #fff;
+  color: #ffffff;
 }
-.middle:hover::after {
-  width: 100%;
+
+@media (min-width: 62em) {
+  .leader_link {
+    display: none;
+  }
+}
+
+.started_link {
+  padding: 1.25rem 1.5rem;
+  border-radius: 0.5rem;
   color: #fff;
+  background-color: var(--primary-color);
+  border: .2rem solid #fff;
+  justify-content: center;
+}
+.started_link:hover {
+  color: var(--primary-color);
+  background-color: #fff;
 }
 .nav_icon {
   width: 3rem;
@@ -127,8 +184,23 @@
 }
 /* Hero section */
 .hero_section {
-  padding: 0 0 11rem;
+  padding: 11rem 0;
+  background-image: url(../media/img2.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
+
+.hero_section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.436);
+}
+
 .hero_section .container {
   flex-direction: column;
   position: relative;
@@ -137,7 +209,7 @@
   font-size: 5.2rem;
   font-weight: 800;
   line-height: 1.05;
-  margin-bottom: 2.4rem;
+  margin-bottom: 3.2rem;
   text-align: center;
 }
 @media (max-width: 62em) {
@@ -154,7 +226,7 @@
   font-size: 2rem;
   line-height: var(--main-line-height);
   color: var(--p-color);
-  margin-bottom: 5.2rem;
+  margin-bottom: 6.8rem;
   width: 80%;
   text-align: center;
 }
@@ -180,7 +252,6 @@
 }
 @media (min-width: 62em) {
   .about_section .container {
-    background-image: url(../media/bcg.png);
     background-size: cover;
   }
   .about_section .container::before {
