--- a/project/css/style.css
+++ b/project/css/style.css
@@ -33,6 +33,10 @@
   transition: all var(--main-transition);
 }
 
+.top_nav_list:first-child a:hover{
+  color: var(--primary-color);
+}
+
 .top_nav_link i{
   font-size: 1.6rem;
 }
@@ -50,6 +54,10 @@
   display: flex;
   align-items: center;
   transition: all var(--main-transition);
+}
+
+.top_nav_list--social a:hover{
+  background-color: var(--primary-color);
 }
 
 .top_nav_list--social i{
@@ -319,6 +327,7 @@
 } */
 .features i {
   font-size: 5.2rem;
+  color: var(--primary-color);
   margin-bottom: 3.2rem;
 }
 .features_section .sec_heading {
@@ -331,10 +340,9 @@
 }
 .features_btn {
   font-size: 2rem;
-  /* color: #fff; */
   width: fit-content;
   padding: 1.3rem 3rem;
-  border: solid .1rem;
+  border: solid .1rem var(--primary-color);
   border-radius: 0.5rem;
   transition: all var(--main-transition);
   justify-self: flex-end;
@@ -342,5 +350,163 @@
 .features_btn:hover {
   color: #fff;
   background-color: var(--primary-color);
-  border-color: var(--primary-color);
+}
+
+/* Contact */
+.contact_section {
+  padding: var(--section-padding) 0;
+  position: relative;
+}
+.contact_section .container {
+  display: flex;
+  gap: 3.2rem;
+  padding: 2rem;
+  border-radius: 1rem;
+}
+@media (min-width: 62em) {
+  .contact_section .container {
+    background-color: var(--light-color);
+  }
+}
+.contact_infos {
+  padding: 4rem 4rem 8rem;
+  border-radius: 1rem;
+  color: #fff;
+  background-image: url(../media/img1.jpg);
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+}
+.contact_infos::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.603);
+}
+@media (max-width: 62em) {
+  .contact_infos {
+    display: none;
+  }
+}
+.contact_info_content {
+  position: relative;
+}
+.contact_infos_title {
+  font-size: 2.4rem;
+  margin-bottom: 2.4rem;
+}
+.contact_infos .parag {
+  margin-bottom: 4.8rem;
+}
+.contact_infos_list {
+  display: flex;
+  flex-direction: column;
+  gap: 4.8rem;
+  /* color: var(--p-color); */
+}
+.contact_info .flex {
+  font-size: 1.8rem;
+  gap: 0.8rem;
+}
+.contact_section .cta_form {
+  width: 100% !important;
+  padding-top: 4rem;
+}
+
+.cta_form {
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+  width: 50%;
+}
+
+@media (max-width: 62em) {
+  .cta_form {
+    width: 100%;
+  }
+}
+@media (max-width: 62em) {
+  .cta_form {
+    width: 100%;
+  }
+}
+.input_line {
+  justify-content: space-between;
+}
+.input_container {
+  position: relative;
+}
+.input_line .input_container {
+  width: 45%;
+}
+.input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.1rem solid #000;
+  color: inherit;
+  outline: none;
+  font-family: inherit;
+  font-size: 1.6rem;
+  width: 100%;
+  position: relative;
+}
+
+option {
+  color: var(--p-color);
+}
+.input_container label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1.6rem;
+  transition: all var(--main-transition);
+}
+.has_value {
+  transform: translateY(-2rem);
+  color: black;
+}
+.input_container:focus-within label,
+.input:focus + label {
+  transform: translateY(-2rem);
+}
+
+.animated_border--active {
+  width: 100%;
+}
+textarea {
+  height: 15rem;
+}
+.submit_btn {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: var(--primary-color);
+  padding: 1rem 2.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all var(--main-transition);
+}
+.submit_btn:hover {
+  color: var(--primary-color);
+  background-color: #fff;
+  border-color: #fff;
+}
+
+.whatsap_contact {
+  padding: 2.4rem;
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  font-size: 3.2rem;
+  justify-content: center;
+  background-color: var(--primary-color);
+  color: #fff;
+  transition: all var(--main-transition);
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
+  position: fixed;
 }
