--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,7 @@ textarea {
 /* Buy Form */
 
 .buy_form_popup{
-  width: 50rem;
+  width: 50%;
   color: #fff;
   background-color: var(--primary-color);
   position: absolute;
@@ -701,7 +701,16 @@ textarea {
   border-radius: 0.5rem;
   z-index: 1;
 }
-
+@media (max-width: 48em) {
+  .buy_form_popup{
+    width: 80%;
+  }
+}
+@media (max-width: 25em) {
+  .buy_form_popup{
+    width: 95%;
+  }
+}
 .buy_form_title{
   font-size: 2.4rem;
   margin-bottom: 3.2rem;
@@ -812,18 +821,27 @@ textarea {
   justify-content: flex-end;
   margin: 7rem 0 0;
 }
-@media (max-width: 32em) {
+@media (max-width: 48em) {
   .creator_box {
-    justify-content: flex-start;
+    justify-content: center;
   }
 }
 .creator {
   font-size: 1.6rem;
+  line-height: 1.5;
+  text-align: center;
   color: #fff;
   margin-right: 6rem;
   position: relative;
 }
-.creator span {
+@media (max-width: 48em) {
+  .creator {
+    display: flex;
+    flex-direction: column;
+    margin-right: 3rem;
+  }
+}
+.creator span:last-child {
   color: var(--primary-color);
 }
 .creator::after {
